[project]
name = "aws-policies-analyzer-docs"
version = "0.1.0"
description = "A AWS policies aws-policies-analyzer documentation"
authors = [
    { name = "Bruno Adelé", email = "brunoadele@gmail.com" },
]
license = "GPL3"
readme = "README.md"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.2.0"
# aws_policies_analyzer_sdk = { git = "https://github.com/badele/aws-policies-analyzer-sdk.git" }


[tool.poetry.group.dev.dependencies]
python = "^3.12"
aws_policies_analyzer_sdk = { path = "../aws-policies-analyzer-sdk/", develop=true }


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
